<resources>
    <string name="app_name">ChatApp</string>


    <!-- Login Activity -->
    <string name="forg_pass">Forgot your password?</string>
    <string name="register">Not A Member? <u>JOIN NOW</u></string>
    <string name="login">Log in</string>
    <string name="password">Password</string>
    <string name="email">Email Address</string>
    <string name="pass_char_less">Password must be 8 characters at least</string>
    <string name="invalid_mail">Invalid E-Mail format</string>
    <string name="login_data_problem">Invalid Email/Password</string>
    <string name="log_in_failed">Failed to log in</string>
    <string name="autofill_email">Set your E-mail Address</string>
    <string name="autofill_password">Set your Pssword</string>
    <string name="or_string">OR</string>
    <string name="buyer">Buyer</string>
    <string name="seller">Seller</string>

    <!-- Home Activity -->
    <string name="toolbar_text">Home</string>
    <string name="toolbar_logout">Logout</string>
    <string name="chat_tab">Chats</string>
    <string name="group_tab">Groups</string>
    <string name="contacts_tab">Contacts</string>

    <!-- Chats Fragment -->
    <string name="hello_blank_fragment">Your Chats will appear here</string>


</resources>
